service offer and review