@@ -2,7 +2,9 @@ package com.unicauca.smart_consumption.infrastructure.offer.dataproviders;
 
 import com.unicauca.smart_consumption.domain.offer.Offer;
 import com.unicauca.smart_consumption.domain.offer.ports.out.IOfferRepository;
+import com.unicauca.smart_consumption.domain.valueobject.Period;
 import com.unicauca.smart_consumption.infrastructure.pattern.mapper.OfferJPAMapper;
+import com.unicauca.smart_consumption.infrastructure.pattern.mapper.ProductJpaEntityMapper;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,6 +12,7 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor(onConstructor_ = @Autowired)
@@ -17,6 +20,7 @@ public class OfferRepositoryAdapter implements IOfferRepository {
 
     private final OfferJPARepository offerJPARepository;
     private final OfferJPAMapper offerJPAMapper;
+    private final ProductJpaEntityMapper productJpaEntityMapper;
 
     @Override
     public Offer createOffer(Offer offer) {
@@ -30,7 +34,7 @@ public class OfferRepositoryAdapter implements IOfferRepository {
                 .map(offerEntity -> {
                     Offer domainOffer = offerJPAMapper.toDomain(offerEntity);
                     domainOffer.update(offer.getDescription(), offer.getDiscountPercentage());
-                    domainOffer.setValidityPeriod(offer.getValidityPeriod());
+                    domainOffer.setPeriod(offer.getPeriod());
                     domainOffer.setStore(offer.getStore());
                     domainOffer.setProduct(offer.getProduct());
                     OfferJPAEntity updatedEntity = offerJPAMapper.toTarget(domainOffer);
@@ -52,13 +56,36 @@ public class OfferRepositoryAdapter implements IOfferRepository {
 
     @Override
     public Optional<Offer> findOfferById(String id) {
-        return offerJPARepository.findById(id).map(offerJPAMapper::toDomain);
+        return offerJPARepository.findById(id).map(entity -> {
+            Offer offer = new Offer();
+            offer.setId(entity.getId());
+            offer.setDescription(entity.getDescription());
+            offer.setDiscountPercentage(entity.getDiscountPercentage());
+            offer.setDiscountedPrice(entity.getDiscountedPrice());
+            offer.setPeriod(new Period(entity.getPeriod().getStartDate()
+                    ,entity.getPeriod().getEndDate()));
+            offer.setProduct(productJpaEntityMapper.toDomain(entity.getProduct()));
+            //offer.setStore(storeJPAMapper.toDomain(entity.getStore()));
+            return offer;}
+        );
     }
 
     @Override
     public List<Offer> findAllOffers() {
         return offerJPARepository.findAll().stream()
-                .map(offerJPAMapper::toDomain).toList();
+                .map(entity -> {
+                    Offer offer = new Offer();
+                    offer.setId(entity.getId());
+                    offer.setDescription(entity.getDescription());
+                    offer.setDiscountPercentage(entity.getDiscountPercentage());
+                    offer.setDiscountedPrice(entity.getDiscountedPrice());
+                    offer.setPeriod(new Period(entity.getPeriod().getStartDate()
+                            ,entity.getPeriod().getEndDate()));
+                    offer.setProduct(productJpaEntityMapper.toDomain(entity.getProduct()));
+                    //offer.setStore(storeJPAMapper.toDomain(entity.getStore()));
+                    return offer;
+                })
+                .collect(Collectors.toList());
     }
 
 }
